# Anadil

./: CHANGELOG.txt  Cargo.toml  KURULUM.txt  LICENSE  README.md  installer.nsi  package.ps1
.github/workflows/: release.yml
Docs/: 01_token_enum.txt  02_token_struct.txt  03_error_struct.txt  04_lexer.txt  05_main_test.txt  anadil_v1_spec.txt  claude_handoff.md  demo_akisi.md  dil_referansi.md  handoff.md  ide_smoke_test.md  local_ide.md  memory_model.md  native_compiler.md  proje_raporu.md  project_status.md  readme_install_section_draft.md  release_layout.md  release_validation.md  runtime_platform_abstraction.md  test_coverage.md  test_gap_analizi.md  todo.md  v0.2_merge_notes.md  v0.3_roadmap.md
examples/: README.md  dizi_v03.ana  dongu.ana  fonksiyon.ana  hata_ana_yok.ana  hata_donus_eksik.ana  hata_karisik_karsilastirma.ana  hata_kir_disarida.ana  hata_tip.ana  hata_yazdir_deger.ana  kapsam.ana  kosul.ana  kosullu_dongu.ana  mantik.ana  metin.ana  metin_v02.ana  native_mvp.ana  negatif.ana  sonsuz_dongu.ana  topla.ana  yeni.ana
runtime/: anadil_runtime.asm
src/: ast.rs  diagnostics.rs  error.rs  ide.rs  interpreter.rs  ir.rs  lexer.rs  lib.rs  main.rs  native.rs  optimizer.rs  parser.rs  sema.rs  token.rs  typed.rs
tests/: cli_diagnostics.rs  examples.rs  native_edge_cases.rs  native_examples.rs
