[package]
name = "anadil"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Emir Canbaz", "Akif Bugra Karsli"]
description = "Turkce sozdizimine sahip kucuk bir programlama dili."
repository = "https://github.com/ArsenAlighieri/Anadil"
resolver = "2"

[dependencies]
eframe = "0.34.1"
rfd = "0.17.2"
